# tri-mesh

./: Cargo.toml
src/: lib.rs  mesh.rs  mesh_builder.rs
src/mesh/: bounding_box.rs  connected_components.rs  connectivity_info.rs  export.rs  ids.rs  intersection.rs  iterators.rs  merge.rs  orientation.rs  quality.rs  split.rs
