[package]
name = "tri-mesh"
version = "0.5.0" # REMEMBER TO UPDATE VERSION IN README!!
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"
description = "A triangle mesh data structure including basic operations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/tri-mesh"
categories = ["data-structures", "algorithms"]
keywords = ["mesh", "geometry", "3d", "half-edge", "graphics"]
exclude = ["/examples", ".gitignore"]

[features]
default = []
3d-io = ["serde", "bincode"] # Support for loading/saving .3d files (custom format)

[dependencies]
cgmath = { version = "0.18", git = "https://github.com/3Dpass/cgmath", branch = "master", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.2", optional = true }

[dev-dependencies]
three-d = "0.1.0"
